deployments/AWS/nodeport-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-bigip-ctlr
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: k8s-bigip-ctlr
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:2.3.0"
          imagePullPolicy: IfNotPresent
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-url=https://10.0.5.130:8443",
            "--insecure=true",
            "--bigip-partition=okd",
            "--namespace=ui-development",
            "--manage-routes=true",
            "--route-vserver-addr=10.0.5.131",
            "--route-http-vserver=okd_http_vs",
            "--route-https-vserver=okd_https_vs",
            "--route-label=lrqui-LTM",
            "--pool-member-type=nodeport",
            "--log-level=DEBUG"
          ]
