deployments/AWS/route-lrqui.yaml
  apiVersion: v1
  kind: Route
  metadata:
    labels:
      f5type: lrqui-LTM
      name: f5-lrq-ui
    name: f5-lrq-ui
    namespace: ui-development
    annotations:
      virtual-server.f5.com/balance: round-robin
      virtual-server.f5.com/health: |
        [
          {
            "path": "globala.neion.net/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
  spec:
    host: globala.neion.net
    path: "/"
    port:
      targetPort: 8080
    to:
      kind: Service
      name: lrqi-ui
